# colorist-for-python

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  INSTALLATION.md  LICENSE.md  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  robots.txt  run_tests.py  setup.cfg  sitemap.xml  tags.json  tox.ini
.github/: dependabot.yml  funding.yml
.github/workflows/: codecov.yml  codeql.yml  docs.yml  docs_version_control.yml  index_now_submit_sitemap.yml  release.yml  test.yml  test_docs.yml
ansi-escape-codes/: index.html
ansi-escape-codes/effects/: index.html
ansi-escape-codes/extended-256-colors/: index.html
ansi-escape-codes/introduction/: index.html
ansi-escape-codes/rgb-colors/: index.html
ansi-escape-codes/standard-16-colors/: index.html
assets/: _mkdocstrings.min.css
assets/css/: colors.css
assets/images/colors/: _colors_16x16.psd
assets/images/examples/: effect_custom_text_blink_red.psd  effect_full_text_blink_cyan.psd  effect_full_text_blink_default.psd
assets/index-now/: api-key.txt
assets/overrides/: main.html
assets/scripts/: text-contrast.js  text-contrast.min.js
assets/stylesheets/: colors.css  colors.min.css  cubes.css  effects.css  gradients.css  tables.css
css/: timeago.min.css
docs/: BingSiteAuth.xml  README.md  donate.md  index.md  requirements.txt  support-and-contribution.md
docs/ansi-escape-codes/: effects.md  extended-256-colors.md  index.md  introduction.md  rgb-colors.md  standard-16-colors.md  standard-colors.md
docs/assets/css/: colors.css  effects.css  extended-colors.css  tables.css
docs/assets/overrides/: main.html
docs/assets/scripts/: extended-colors.js
docs/assets/stylesheets/: colors.css  cubes.css  gradients.css  tables.css
docs/getting-started/: index.md  installation.md
docs/index/: tags.md
docs/project/: donate.md  support-and-contribution.md
docs/reference/: ansi-escape-codes.md  background-colors.md  effects-and-styling.md  hex-colors.md  hsl-colors.md  index.md  rgb-colors.md  text-foreground-colors.md  text-styling.md
docs/reference/background-colors/: full-line.md  mixed.md
docs/reference/custom/: text-styling.md
docs/reference/effects-and-styling/: full-line.md  mixed.md
docs/reference/extended-colors/: hex.md  hsl.md  oklch.md  rgb.md  vga.md
docs/reference/text-colors/: full-line.md  mixed.md
docs/user-guide/: background-colors.md  effects-and-other-styles.md  effects-and-styling.md  hex-colors.md  hsl-colors.md  index.md  other-string-formats.md  rgb-colors.md  standard-and-bright-color-palette.md  terminal-support.md  text-foreground-colors.md
docs/user-guide/colors/: hex.md  hsl.md  rgb.md  standard-and-bright-palette.md
docs/user-guide/compatibility/: backwards-compatible-string-formats.md  terminal-support.md
docs/user-guide/custom/: text-styling.md
docs/user-guide/extended-colors/: hex.md  hsl.md  oklch.md  rgb.md  vga.md
docs/user-guide/materials/: ansi-escape-codes.md  other-string-formats.md  terminal-support.md
docs/user-guide/standard-colors/: background.md  normal-and-bright-palette.md  text-foreground.md
donate/: index.html
getting-started/: index.html
getting-started/installation/: index.html
index/tags/: index.html
js/: timeago_mkdocs_material.min.js
project/donate/: index.html
project/support-and-contribution/: index.html
reference/: index.html
reference/background-colors/full-line/: index.html
reference/background-colors/mixed/: index.html
reference/custom/text-styling/: index.html
reference/effects-and-styling/full-line/: index.html
reference/effects-and-styling/mixed/: index.html
reference/extended-colors/hex/: index.html
reference/extended-colors/hsl/: index.html
reference/extended-colors/oklch/: index.html
reference/extended-colors/rgb/: index.html
reference/extended-colors/vga/: index.html
reference/text-colors/full-line/: index.html
reference/text-colors/mixed/: index.html
search/: search_index.json
src/colorist/: __init__.py  __main__.py  background_bright_color.py  background_color.py  bright_color.py  color.py  effect.py  version.py
src/colorist/constants/: __init__.py  ansi.py  ascii.py
src/colorist/helper/: __init__.py  convert.py  error.py  generate.py  print.py  validate.py
src/colorist/model/: README.MD  __init__.py  background_bright_color.py  background_color.py  bright_color.py  color.py  effect.py  hsl.py  rgb.py
src/colorist/print/: __init__.py  effect.py  general.py
src/colorist/style/: text.py
support-and-contribution/: index.html
tags/: index.html
test/: README.md  terminal.py
test/_config/: callables.py
test/_example/: run_tests.py
test/_example/background_bright_color/: full_text.py
test/_example/bright_color/: full_text.py
test/_example/color/: custom_text.py
test/_example/effect/: full_text.py
test/_examples/: README.md  run_examples.py
test/_examples/background_bright_color/: custom_text.py  full_text.py
test/_examples/background_color/: full_text.py
test/_examples/bright_color/: custom_text.py  full_text.py
test/background_bright_color/: custom_background_bright_color_test.py  examples_custom_text.py  examples_full_text.py  full_text_background_bright_color_test.py
test/background_color/: custom_background_color_test.py  examples_custom_text.py  examples_full_text.py  full_text_background_color_test.py
test/background_rgb/: full_text_background_rgb_test.py
test/bright_color/: custom_bright_color_test.py  examples_custom_text.py  full_text.py  full_text_bright_color_test.py
test/color/: custom_color_test.py  examples_custom_text.py  full_text.py  full_text_color_test.py  full_text_test.py
test/effect/: custom_effect_test.py  examples_custom_text.py  full_text.py  full_text_effect_test.py  full_text_with_color.py
test/hsl/: full_text_hsl_test.py
test/print/: full_text_general_test.py
test/style/: text_as_lambda_method_test.py  text_test.py
user-guide/: index.html
user-guide/effects-and-styling/: index.html
(+145 files in other folders)
