[project]
name = "colorist"
version = "1.8.11"
description = "Lightweight package that makes it easy and fast to print colored text in the terminal"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "coverage==7.13.2",
    "flake8==7.3.0",
    "mkdocs==1.6.1",
    "mkdocs-git-revision-date-localized-plugin==1.5.1",
    "mkdocs-material==9.7.1",
    "mkdocs-material-extensions==1.3.1",
    "mkdocs-minify-plugin==0.8.0",
    "mkdocs-redirects==1.2.2",
    "mkdocstrings==1.0.2",
    "mkdocstrings-python==2.0.1",
    "mypy==1.19.1",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "tox==4.34.1",
]

[build-system]
requires = [
    "setuptools==80.10.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.isort]
line_length = 120
