[metadata]
name = colorist
version = attr: colorist.__version__
author = Jakob Bagterp
author_email = jakob_bagterp@hotmail.com
maintainer = Jakob Bagterp
maintainer_email = jakob_bagterp@hotmail.com
description = Colorist for Python
long_description = file: README.md, INSTALLATION.md, LICENSE.md
long_description_content_type = text/markdown
keywords =
    python
    colors
    terminal
url = https://github.com/jakob-bagterp/colorist-for-python
project_urls =
    Bug Tracker = https://github.com/jakob-bagterp/colorist-for-python/issues
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
license = 3-Clause BSD License
license_files = LICENSE.md

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
zip_safe = no
include_package_data = True

[options.extras_require]
testing =
    coverage ==7.2.6
    flake8 ==6.0.0
    mypy ==1.3.0
    pytest ==7.3.1
    pytest-cov ==4.1.0
    tox ==4.5.2

[options.packages.find]
where = src

[options.package_data]
colorist = py.typed

[mypy]
mypy_path = $MYPY_CONFIG_FILE_DIR/src
disallow_any_unimported = True
no_implicit_reexport = True
show_error_codes = True
strict = True
warn_unreachable = True

[pycodestyle]
max_line_length = 120

[flake8]
ignore =
    # Line length set to 120 by Autopep8:
    E501
exclude =
    .git
    __pycache__
    dist
