[metadata]
name = colorist
version = 1.8.6
author = Jakob Bagterp
author_email = jakob_bagterp@hotmail.com
maintainer = Jakob Bagterp
maintainer_email = jakob_bagterp@hotmail.com
description = Colorist for Python
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
keywords =
    python
    colors
    terminal
url = https://jakob-bagterp.github.io/colorist-for-python/
download_url = https://pypi.org/project/colorist/
project_urls =
    Bug Tracker = https://github.com/jakob-bagterp/colorist-for-python/issues
    Documentation = https://jakob-bagterp.github.io/colorist-for-python/
    API Reference = https://jakob-bagterp.github.io/colorist-for-python/reference/
    Source Code = https://github.com/jakob-bagterp/colorist-for-python
    Release Notes = https://github.com/jakob-bagterp/colorist-for-python/releases
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
license = 3-Clause BSD License
license_files = LICENSE.md

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
zip_safe = no
include_package_data = True

[options.extras_require]
testing =
    coverage==7.10.6
    flake8==7.3.0
    mypy==1.18.2
    pytest==8.4.1
    pytest-cov==6.2.1
    tox==4.29.0

[options.packages.find]
where = src

[options.package_data]
colorist = py.typed

[mypy]
mypy_path = $MYPY_CONFIG_FILE_DIR/src
disallow_any_unimported = True
no_implicit_reexport = True
show_error_codes = True
strict = True
warn_unreachable = True

[pycodestyle]
max_line_length = 120

[flake8]
ignore =
    # Line length set to 120 by Autopep8:
    E501
exclude =
    .git
    __pycache__
    dist
